add skeleton html, add a bit of front page and a bit of styling

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-xyz
+<header>
+    <nav>
+        <button class="selected-button">We Bake</button>
+        <button>Menu</button>
+        <button>About</button>
+    </nav>
+</header>
+<div id="content">
+    <h1>We Bake</h1>
+    <div class="home">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto enim eum ex minima, molestiae nesciunt nihil placeat reiciendis repellat reprehenderit sed similique? Et molestiae obcaecati perspiciatis qui, repellendus voluptate.
+    </div>
+</div>
 </body>
 </html>
