--- a/src/template.html
+++ b/src/template.html
@@ -16,11 +16,6 @@
         <button>About</button>
     </nav>
 </header>
-<div id="content">
-    <h1>We Bake</h1>
-    <div class="home">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto enim eum ex minima, molestiae nesciunt nihil placeat reiciendis repellat reprehenderit sed similique? Et molestiae obcaecati perspiciatis qui, repellendus voluptate.
-    </div>
-</div>
+<div id="content"></div>
 </body>
 </html>
