add html skeleton in js for menuModule and add switching logic for nav bar

--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,14 @@
 <body>
 <header>
     <nav>
-        <button class="selected-button">We Bake</button>
-        <button>Menu</button>
-        <button>About</button>
+        <button id="homepage-button">We Bake</button>
+        <button id="menu-button">Menu</button>
+        <button id="about-button">About</button>
     </nav>
 </header>
-<div id="content"></div>
+<div id="content">
+    <img src=""
+         alt="">
+</div>
 </body>
 </html>
